Fixed issue with Location banner address link bleeding into road pin Created new caweb_get_attachment_post_meta to retrieve media library information based of image url Added alt text to location banner widget

--- a/css/modules.css
+++ b/css/modules.css
@@ -91,11 +91,15 @@ overflow: hidden;
 	width: 100%;
 }
 /* Location Banner Thumbnail Image Fix*/
-.location.banner .thumbnail img {
+.et_pb_ca_location_widget.location.banner .thumbnail img {
     width: 100%;
  }
 .et_pb_ca_location_widget.location.banner .description {
     padding-bottom: 10px;
+}
+.et_pb_ca_location_widget.location.banner .address a {
+  margin-left: 30px;
+  display: inline-block;
 }
 /* Profile Banner */
 .profile-banner .banner-subtitle{
